# rusty-rika

./: .gitignore  2  Cargo.toml  ]  f:w
async-callable/: Cargo.toml
async-callable/src/: lib.rs
id-locked/: Cargo.toml
id-locked/src/: lib.rs
kani-kani/: Cargo.toml
kani-kani/src/: lib.rs
lexicon/: Cargo.toml
lexicon/src/: core.rs  lib.rs  macros.rs
migrations/: 20230714204039_start.sql  20230718011320_some_timestamps.sql
rika-bancho/: Cargo.toml
rika-bancho/kani-kani/: Cargo.toml
rika-bancho/src/: error.rs  kani.rs  lib.rs
rika-bancho/src/commands/: mod.rs  owo.rs  submit.rs
rika-model/: Cargo.toml
rika-model/src/: lib.rs
rika-model/src/barebone_commands/: submit.rs
rika-model/src/i18n/: en.rs  mod.rs
rika-model/src/osu/: beatmap.rs  mod.rs  submit.rs
rika-model/src/rika_cord/: mod.rs
rika-poise/: Cargo.toml
rika-poise/src/: error.rs  lib.rs  setup.rs
rika-poise/src/commands/: mod.rs
rika-poise/src/commands/math/: calc.rs  mod.rs
rika-poise/src/commands/osu/: link.rs  mod.rs  submit.rs
rika-poise/src/commands/osu/recommend/: mania.rs  mod.rs  osu.rs  taiko.rs
rika-poise/src/commands/owner/: mod.rs  register.rs
rika-poise/src/commands/rate/: mod.rs
rika-poise/src/commands/user/: avatar.rs  mod.rs
rika-poise/src/models/: mod.rs  osu_user.rs
rika-poise/src/tasks/osu/: submit.rs
rika-poise/src/translations/: en.rs  mod.rs  pt_br.rs
rika-poise/src/utils/: emojis.rs  mod.rs  osu.rs
rika-sql/: Cargo.toml
roricon/: Cargo.toml
roricon/src/: lib.rs
src/: error.rs  main.rs  setup.rs
src/commands/: mod.rs
src/commands/math/: calc.rs
src/commands/osu/: link.rs  mod.rs  recommend.rs  submit.rs
src/commands/osu/recommend/: mania.rs  mod.rs  osu.rs  taiko.rs
src/commands/owner/: register.rs
src/commands/rate/: mod.rs  waifu.rs
src/commands/user/: avatar.rs  mod.rs
src/models/: mod.rs  osu_score.rs  osu_user.rs  rika_user.rs
src/tasks/: mod.rs
src/tasks/osu/: mod.rs  submit.rs
src/translations/: en.rs  mod.rs  pt_br.rs
src/utils/: emojis.rs  mod.rs  osu.rs  replies.rs
