[package]
name = "rika"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
strip = true 
lto = true  
codegen-units = 1

[workspace]
members = [
    "rika-poise",
    "rika-bancho",
    "rika-bancho/kani-kani",
    "rika-sql",
    "id-locked",
    "lexicon",
    "roricon",
    "async-callable"
]

[dependencies]
tokio = "1.29.1"
rika-poise = {path="./rika-poise"}
rika-bancho = {path="./rika-bancho"}
dotenvy = "0.15.7"

