[package]
name = "kani-kani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
nasus = "0.2.1"
async-callable = { path = "../async-callable" }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
tokio = "1.29.1"
thiserror = "1.0.44"
