[package]
name = "rika-bancho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-callable = { path = "../async-callable" }
envy = "0.4.2"
itertools = "0.11.0"
nasus = "0.2.1"
serde = { version = "1.0.174", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
thiserror = "1.0.44"
tokio = "1.29.1"
