[package]
name = "rika-bancho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
nasus = "0.2.1"
tokio = "1.29.1"
kani-kani = { path = "../kani-kani" }
rika-model = { path = "../rika-model" }
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.44"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
derive_more = "0.99.17"
rosu-v2 = "0.8.0"
anyhow = "1.0.72"
