[package]
name = "rika-poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
derive_more = "0.99.17"
dotenvy = "0.15.7"
envy = "0.4.2"
log = "0.4.19"
poise = "0.5.5"
serde = { version = "1.0.167", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
tokio = { version = "1.29.1", features = ["full"] }
nestruct = "0.1.0"
lexicon = {path = "../lexicon" }
roricon = {path = "../roricon" }
id-locked = {path = "../id-locked" }
bevy_reflect = "0.11.0"
env_logger = "0.10.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
exmex = "0.17.3"
paste = "1.0.13"
rand = "0.8.5"
rosu-v2 = "0.8.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "mysql", "time"] }
rosu-pp = { version = "0.9.4", features = ["async_tokio"] }
reqwest = "0.11.18"
thiserror = "1.0.43"
tuple-map = "0.4.0"
itertools = "0.11.0"
num-traits = "0.2.15"
fchashmap = "0.1.3"
