[package]
name = "roricon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.11.0"
itertools = "0.11.0"
lexicon = { path = "../lexicon" }
poise = "0.5.5"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
